<resources>
    <string name="app_name">ProNotes</string>
    <string name="color_changing">Color Changing</string>
    <string name="settings">settings</string>
    <string name="help">Help</string>
    <string name="title">Title:</string>
    <string name="add_notes">Add Notes:</string>
    <string name="brett_tech_networking">Brett Tech Networking</string>
    <string name="tools_menu">Tools Menu</string>
    <string name="pick_color">Pick Color</string>
    <string name="activity_create_note_input_note_text_hint">activity_create_note_input_note_text_hint</string>
    <string name="activity_create_note_input_note_subtitle_hint">activity_create_note_input_note_subtitle_hint</string>
    <string name="activity_create_note_input_note_title_hint">activity_create_note_input_note_title_hint</string>
    <string name="brett_tech_networking_2023">Brett Tech Networking 2023</string>
    <string name="title_activity_drawing">DrawingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_checklist_item">Add Checklist Item</string>
    <string name="hint_checklist_item">hint checklist item</string>
    <string name="settings1">Settings</string>
    <string name="edit_note_title">Edit note</string>
    <string name="checklist">Checklist</string>
    <string name="checklist_title_hint">Checklist title</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_notes">Notes</string>
    <string name="settings_color_tiles_title">Color changing tiles</string>
    <string name="settings_color_tiles_desc">Cycle note tile colors on the home screen</string>
    <string name="settings_3d_notes_title">3D note style</string>
    <string name="settings_3d_notes_desc">Sculpted extruded notes. Turn off for a flat look</string>
    <string name="settings_static_color_title">Static tile color</string>
    <string name="settings_static_color_desc">Used when color changing tiles are off</string>
    <string name="settings_autosave_title">Auto-save notes</string>
    <string name="settings_autosave_desc">Save changes as you type</string>
    <string name="restart_app">Restart App</string>

    <string name="back_button">Back</string>
    <string name="save_button">Save</string>
    <string name="add_button">Add</string>
    <string name="delete_button_description">delete_button_description</string>
    <string name="add_button_description">add_button_description</string>

</resources>