<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notes_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/multiblack"
    tools:context=".NotesTakerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alwaysRetainTaskState="true">

        <Toolbar
            android:id="@+id/toolbar_notes"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/multiblack">

                <ImageView
                    android:id="@+id/imageView_save"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/save_button"
                    android:padding="4dp"
                    android:src="@drawable/ic_save" />

                <ImageView
                    android:id="@+id/imageView_back"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/back_button"
                    android:padding="9dp"
                    android:src="@drawable/ic_back"
                    android:visibility="visible" />
            </RelativeLayout>
        </Toolbar>

        <Toolbar
            android:id="@+id/text_style_toolbar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:allowClickWhenDisabled="false"
            android:background="@drawable/background_miscellaneous"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_notes">

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/boldbutton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bold_text_selector"
                android:checked="false"
                android:textOff=""
                android:textOn="" />

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/italicbutton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/italic_text_selector"
                android:checked="false"
                android:textOff=""
                android:textOn="" />

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/underlinebutton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/underline_text_selector"
                android:checked="false"
                android:textOff=""
                android:textOn="" />
        </Toolbar>

        <EditText
            android:id="@+id/editText_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/title"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_style_toolbar" />

        <jp.wasabeef.richeditor.RichEditor
            android:id="@+id/editText_notes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/border"
            android:padding="8dp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            app:layout_constraintBottom_toTopOf="@id/tools_peek_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_title" />

        <View
            android:id="@+id/editNoteIndicator"
            android:layout_width="10dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@drawable/note_indicator"
            app:layout_constraintEnd_toStartOf="@+id/editText_notes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/editText_notes" />

        <TextView
            android:id="@+id/textView_EditNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brett_tech_networking_2023"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tools_peek_space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Space
            android:id="@+id/tools_peek_space"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/layout_miscellaneous"
        layout="@layout/layout_miscellaneous" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
