<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_Miscellaneous2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:elevation="8dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="40dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textMiscellaneous"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/tools_menu"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/iv_undo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_undo_24" />

            <ImageView
                android:id="@+id/iv_redo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_redo_24" />

            <ImageView
                android:id="@+id/iv_eraser"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/eraser_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNoteColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/view_white"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_1" />

                <ImageView
                    android:id="@+id/white_check"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_check"
                    android:visibility="gone"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/view_yellow"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_2" />

                <ImageView
                    android:id="@+id/yellow_check"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_check"
                    android:visibility="gone"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/view_red"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_3" />

                <ImageView
                    android:id="@+id/red_check"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_check"
                    android:visibility="gone"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/view_blue"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_4" />

                <ImageView
                    android:id="@+id/blue_check"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_check"
                    android:visibility="gone"
                    app:tint="@color/white" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/view_black"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_5" />

                <ImageView
                    android:id="@+id/black_check"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_check"
                    android:visibility="gone"
                    app:tint="@color/white" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/layout_color_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_color_picker"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginBottom="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/color_picker"
                    app:shapeAppearanceOverlay="@style/circleImageView" />

                <TextView
                    android:id="@+id/tv_pick_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:includeFontPadding="false"
                    android:text="@string/pick_color"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
